# co2_forecast_nl

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: openmeteo_forecast_7days.csv
src/: data.py  evaluate.py  forecast.py  models.py  train.py
src/co2_forecast/: data.py  evaluate.py  forecast.py  models.py  train.py
src/co2_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
