[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co2_forecast"
version = "0.1.0"
description = "CO2 emission factor forecasting (NL) using TFT and N-HiTS"
authors = [{ name = "Aleksandra Kiuberis" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "polars",
    "torch",
    "pytorch-forecasting==1.6.1",
    "lightning",
    "matplotlib",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]