[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co2_forecast"
version = "0.1.0"
description = "CO2 emission factor forecasting (NL) using TFT and N-HiTS"
authors = [{ name = "Aleksandra Kiuberis" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "torch>=2.0",
    "pytorch-forecasting==1.6.1",
    "lightning>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pytest>=7.4"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff",
    "black"
]

[project.urls]
Repository = "https://github.com/kyuberis/co2_forecast_nl"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.setuptools.packages.find]
where = ["src"]